@@ -36,23 +36,27 @@ AC_DEFUN([AC_SSH],
      ac_have_ssh=yes
      AC_ADD_STATIC_MODULE("sshcmd")
      AC_DEFINE([HAVE_SSH], [1], [Define if you have ssh.])
-  fi
-  AC_SUBST(HAVE_SSH)
 
-  x_ac_ssh_connect_timeout_option="-oConnectTimeout=%d"
+     x_ac_ssh_connect_timeout_option="-oConnectTimeout=%d"
 
-  AC_ARG_WITH(
-    [ssh-connect-timeout-option],
-    AS_HELP_STRING(--with-ssh-connect-timeout-option=OPT,
+     AC_MSG_CHECKING([for ssh connect timeout option])
+     AC_ARG_WITH(
+      [ssh-connect-timeout-option],
+      AS_HELP_STRING(--with-ssh-connect-timeout-option=OPT,
 		           SSH option for connect timeout),
-	[x_ac_ssh_connect_timeout_option=$withval])
+	  [x_ac_ssh_connect_timeout_option=$withval])
+
 	  
-  if ! echo "$x_ac_ssh_connect_timeout_option" | grep -i ^none 2>/dev/null; then
-    AC_DEFINE([SSH_HAS_CONNECT_TIMEOUT], [1], 
-              [Define if SSH supports a connect timeout option.])
-    AC_DEFINE_UNQUOTED(
-			  [SSH_CONNECT_TIMEOUT_OPTION], 
+     if ! echo "$x_ac_ssh_connect_timeout_option" | grep -i '^no$' 2>/dev/null \
+	  && ! echo "$x_ac_ssh_connect_timeout_option" | grep -i '^none$' 2>/dev/null; then
+	   AC_MSG_RESULT([${x_ac_ssh_connect_timeout_option}])
+       AC_DEFINE([SSH_HAS_CONNECT_TIMEOUT], [1], 
+                 [Define if SSH supports a connect timeout option.])
+       AC_DEFINE_UNQUOTED(
+	  		  [SSH_CONNECT_TIMEOUT_OPTION], 
               "$x_ac_ssh_connect_timeout_option",
 			  [Define to SSH connect timeout option])
+    fi
   fi
+  AC_SUBST(HAVE_SSH)
 ])
